# alignment

./: README.md  run_finetuning_ner.py  run_finetuning_pos.py
alignment_data/: alignment_data.py
alignment_data/tlm/bzd/: es-bzd.src_tgt
alignment_data/tlm/shp/: es-shp.src_tgt
alignment_data/wiki/gn/: wiki.gn.doc.0
awesome-align/: run_train.py
awesome-align/awesome_align.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
awesome-align/final_outputs/mbert_baseline/: bzd_dev.output  bzd_test.output  gn_dev.output  gn_test.output  quy_dev.output  quy_test.output  shp_dev.output
awesome-align/final_outputs/mlm_bert-base-multilingual-cased_chunked-True_80/: bzd_dev.output  bzd_test.output  gn_dev.output  gn_test.output  quy_dev.output  quy_test.output  shp_dev.output
awesome-align/final_outputs/mlm_src_tgt_bert-base-multilingual-cased_chunk-True_40/: bzd_dev.output  bzd_test.output  gn_dev.output  gn_test.output  quy_dev.output  quy_test.output  shp_dev.output
awesome-align/final_outputs/mlm_tgt_wiki_80/: gn_dev.output  gn_test.output  quy_dev.output  quy_test.output
awesome-align/final_outputs/tlm_80/: bzd_dev.output  bzd_test.output  gn_dev.output  gn_test.output  quy_dev.output  quy_test.output  shp_dev.output
awesome-align/scripts/: all_layer_analysis.sh  evaluate.sh  evaluate_layer_analysis.sh  evaluate_length_analysis.sh  evaluate_subset_analysis.sh
awesome-align/tools/: aer.py
configs/experiment/pretraining/: pretraining_default.yaml
configs/tokenizer/: mbert_tokenizer.yaml  xlmr_tokenizer.yaml
configs/training_arguments/finetuning/: pos.yaml
configs/training_arguments/pretraining/: pretraining_a100.yaml  pretraining_a100_xlmr.yaml  pretraining_default.yaml
custom_datasets/: aligned_pos_dataset.py  conll_pos_dataset.py  ner_dataset.py
data/ner_data/es/: train
data/ner_data/gn/: dev  extra  test  train
data/ner_data/quy/: dev  extra  test  train
data/pos_data/en/: en_gum-ud-dev.txt  en_gum-ud-test.txt  en_gum-ud-train.txt
data_for_analysis/length_analysis_data/orig/: tlm0.es  tlm0.quy  tlm1.es  tlm1.quy  tlm10.es  tlm10.quy  tlm11.es  tlm11.quy  tlm12.es  tlm12.quy  tlm13.es  tlm13.quy  tlm14.es  tlm14.quy  tlm15.es  tlm15.quy  tlm2.es  tlm2.quy  tlm3.es  tlm3.quy  tlm4.es  tlm4.quy  tlm5.es  tlm5.quy  tlm6.es  tlm6.quy  tlm7.es  tlm7.quy  tlm8.es  tlm8.quy  tlm9.es  tlm9.quy
data_for_analysis/length_analysis_data/testconcat/: traintest0.es  traintest0.quy  traintest1.es  traintest1.quy  traintest10.es  traintest10.quy  traintest11.es  traintest11.quy  traintest12.es  traintest12.quy  traintest13.es  traintest13.quy  traintest14.es  traintest14.quy  traintest15.es  traintest15.quy  traintest2.es  traintest2.quy  traintest3.es  traintest3.quy  traintest4.es  traintest4.quy  traintest5.es  traintest5.quy  traintest6.es  traintest6.quy  traintest7.es  traintest7.quy  traintest8.es  traintest8.quy  traintest9.es  traintest9.quy
data_for_analysis/subset_analysis_data/orig/: train100.es  train100.quy  train12800.es  train12800.quy  train1600.es  train1600.quy  train200.es  train200.quy  train25600.es  train25600.quy  train3200.es  train3200.quy  train400.es  train400.quy  train50.es  train50.quy  train6400.es  train6400.quy  train800.es  train800.quy
data_for_analysis/subset_analysis_data/testconcat/: traintest100.es  traintest100.quy  traintest12800.es  traintest12800.quy  traintest1600.es  traintest1600.quy  traintest200.es  traintest200.quy  traintest25600.es  traintest25600.quy  traintest3200.es  traintest3200.quy  traintest400.es  traintest400.quy  traintest50.es  traintest50.quy  traintest6400.es  traintest6400.quy  traintest800.es  traintest800.quy
data_utils/wikipedia/: create_wiki_samples.py  download_and_chunk_wiki.sh  download_wiki.sh  preprocess_wiki.py  preprocess_wiki_datasets.py  preprocess_wiki_iterable_dataset.py
downstream_tasks/ner/: convert_for_train.py  project_alignment.py  tag_inputs.py
downstream_tasks/ner/scripts/: convert_for_train.sh  project_alignment.sh  project_baseline_alignment.sh  tag_inputs.sh
downstream_tasks/pos/: project_alignment.py  switch.py  tag_inputs.py
downstream_tasks/pos/scripts/: project_alignment.sh  project_baseline_alignment.sh  tag_inputs.sh
pretraining/: run_multilang_pretraining.py  run_singlelang_pretraining.py
scripts/finetuning/: finetune_adapted_aligned_pos.sh  finetune_adapted_pos.sh  finetune_all_ner.sh  finetune_ner.sh  finetune_ner_with_model.sh  finetune_newbl.slurm  finetune_pos.sh
scripts/finetuning/ner/: finetune.sh
scripts/pretraining/: pretrain_mlm_src_tgt.sh  pretrain_mlm_tgt.sh  pretrain_mlm_tgt_wiki.sh  pretrain_tlm.sh
scripts/pretraining/length_analysis/: pretrain_mlm_tgt_wiki_gn.sh  pretrain_mlm_tgt_wiki_quy.sh  pretrain_tlm_gn.sh  pretrain_tlm_quy.sh
scripts/pretraining/subset_analysis/: pretrain_mlm_src_tgt_a100.sh  pretrain_mlm_st_cf.sh  pretrain_mlm_tgt_wiki.sh  pretrain_mlm_tw_cf.sh  pretrain_tlm_a100.sh
scripts/pretraining/xlmr/: pretrain_mlm_src_tgt_a100.sh  pretrain_mlm_tgt.sh  pretrain_mlm_tgt_wiki.sh  pretrain_tlm_a100.sh
statistical_alignment/input_data/bzd/: dev.bzd  dev.es  test.bzd  test.es  train.bzd  train.es
statistical_alignment/input_data/gn/: dev.es  dev.gn  test.gn  train.es  train.gn
statistical_alignment/input_data/quy/: dev.es  dev.quy  test.quy
statistical_alignment/input_data/shp/: dev.es  dev.shp  test.es  test.shp  train.es  train.shp
statistical_alignment/tools/: convert_gpp_to_ph.py  create_data.sh  tlm_to_bitext.py
token_counts/: mlm_tgt.txt  tlm.txt  wiki.txt
utils/: average_chars.py  count_tokens.py  create_dataset_sample.py  log_reader.py  subset_analyis_for_fa.py  tokenization_tests.py
xlmr-awesome/awesome_align.egg-info/: PKG-INFO  SOURCES.txt
xlmr-awesome/final_outputs/mlm_src_tgt_xlm-roberta-base_chunk-True_40/: gn_dev.output  quy_dev.output  quy_test.output
xlmr-awesome/final_outputs/xlmr_baseline/: shp_test.output
xlmr-awesome/scripts/: all_evaluate.sh  all_layer_analysis.sh  evaluate.sh  evaluate_layer_analysis.sh  layer_analysis.slurm
xlmr-awesome/tools/: aer.py
(+346 files in other folders)
