Oî tapicha ikatu'ÿva oñangareko ambue tapicha rehe .
Anderson oñua'â Reagan ndive isa'ÿvaramo .
Remba'apova'erâ 10 aravo pype ikatu haĝuáicha nderatupyry ipype .
Urban ohoramoguare Vietnam-pe ore romenda ramoite , he'i JoAnn .
Ko'â mokôi ary oútava rehe 30$nte rehepyme'êta reime haĝua ipype. .
He'i rire ndéve mba'épa rejapóta ehónte nde tenode gotyo ha ejapo ndejeheguiete .
Ko'â 45 ára aja roñeha'âta roheka umi nome'êiva'ekuépe ko ary fiscal ajápe .
Greneral May márô ndohóiva Mburuvichavete Kennedy mba'apoha rendápe .
IRT niko omba'apo ñoha'ânga temimbo'ekuérape ĝuarâ pyahukuéra mbo'ehaópe .
5% tapichakuéra ohasáva 25 ary ñane retâme ohupyty ñepytyvô .
Tetâ vore Indiana oreko peteìete mbo'ehao ñepohâno rehegua .
General May ha umi pilóto ohasa porâiterei ohóvo hikuái upoe mba'apoha rendápe .
Ha'e he'íkuri oujeytaha ko mba'apoha rendápe jekaruasajére .
Ha'e okirirî ha omaña imesa gotyo .
Oiméne upéva rehe che mandu'a héra .
Ñambyasyetépa . Chembovy'a ndeikuaaiha mba'éichapa ojejapo .
kóva ko ary ipaha rohepyme'êta ko jeikerâ .
Ajapo ko mba'e tuichamba'éva oñeme'êva chéve ko pyhareve .
Ohókuri túva árape ha Ellen akói oñangareko hese .
Ñanemongyhyje añete upe vytu pochy oguahêva távape .
Oho hikuái upe tape oî hetahápe jekaruha ha je'y'uha .
Oî tembiapopy omokyre'ÿva mitânguérape oike haĝuâ arandukakotýpe .
Oî tembiapopy omokyre'ÿva mitânguérape oike haĝuâ arandukakotýpe mokôijey peteî arapokôindýpe .
JoAnn he'íkuri ha'e ha Urban peteî jasy omendahague ohoramoguare Vietnam-pe .
CIA omboguejy peteî ta'ângamýi ha oraha Tetânguéra Joajupavême upehague ko'ême .
Atyha ojepy'apy mymbakuéra oguepotámava Africa-pe rehe .
Oî tapicha ome'êva oréve viru orepytyvô rohypyty haĝua ore viru jeporurâ ohupytýva 1 millón $ .
Oî tapicha ome'êva oréve viru ore atyha oku'e haĝua .
Umi mba'e hepy'^yva meme jajuhu upérupi .
Sociedad Maennerchor ohupyty 1 millón $ ary ohasava'ekuépe .
Joaju oikóva oiko rei ha ndaha'éi nde rupi .
Ajerure reme'êmi haĝua 100$ arandukakoty Mbo'ehaovusu mba'éva IUPUI-pe .
Che jarýi onace 10 ary iñambue rire siglo .
Roikotevê 100 mbo'ehára pyahu ikatupyry añetéva .
Nantendéi mba'érepa oha'arô che amoha'ângapataha ko árape .
Ndoroipotái roguerohorýigui umi marandu apegua ha ndoreokói pukoe arupigua .
Ndoikuaái mba'erâpa oho ni mba'eve , upémaramo omombe'úta Whashington-pe oje'ehaguépe .
Rohaíta nome'êiva'ekue ko ary fiscal-pe ko'â 45 ára puku aja pene ñe'êvevépe .
Ore ru he'i oréve mitâha , ndaha'éiha mymba .
Ikatúramo , ehenoimi Kathy Dannels oiméramo reñe'êse ne remime'êmby rehe .
Ikatu heta viru rehupyty rerekóramo téla aorâ iporâva .
Oiméne petî mokôi aravópe mba'e ajuhu ahekáva .
Oikuaa porâiterei ojapova'erâ ohokuévo Washington-pe .
He'ise Becky , Stephanie , Marcus ha Emily umívape , upéicha avei he'ise ambue temimbo'e ha'ekueraichagua .
Oiméne ha'e he'ira'e chupekuéra ha upe jave che nañatendéinera'e .
Nde po ikatu iñambue tuichakuépe renohêramo nde ao ryégui .
Rombyai umi aviô ha upéi romohendajey .
Ha ha'e ikuñarayhurasa , ha! , ha'ete ku okápe oîva . Ha nde reikuaáma , ndo'aporâi chéve umíva , katu umíva che rembiasánte .
