Ha ko'áĝa areko che kyvy peteî oikóva Alemania-pe .
Ko'áĝa che rajy omboguatakuaáma imba'yru , ijeheguíntema oĝuahêkuaa .
Néi , itujaiterei , ikatu porâ itúva .
Sapy'aitemi , remombe'uséramo , che aháta .
He’i hi’ãva’erahã oñemoguahẽ ichupe upe apopyrã ipahague ko ka'aru papokõi aravo mboyve .
Mburuvicha nomba'apovéima upe Estados Unidos Fuerzas Aerea-pe .
Upe ñembokatupyry reiporukuaa haĝua upe ao de presión ipukumihína .
HA'e oikuaaseve mba'éichapa ogana viru umi cooperativa de ahorro y crédito .
Ha'ekuéra oñembokatupyrýma oiporu haĝua umi ao pyrusu tatápe ĝuarâ ha chéve hasýkuri añepyrû haĝua aiporu upe ao pyryguasu tatápe ĝuarâ .
Iñarandu hikuái , katu oñembotavyete oî jave ambue oikuaa'ÿ ichupekuéra ypýpe .
Pévaniko peteî hélice michîva ofraguáva peteî inyección , katu upe ojopyha rape , upe túvo de presión oiporúva pilóto ha ojapóva contrapresión .
Che py’a pererepa avy'aségui ha'e oîhaguére upépe .
Ovy'aitereígui opo ha haimete oñeakânupâ okê renda rehe .
Reikóramo ko tetâme reiko ndepy'a nde jurúpe , akói rekyhyje âichagua mba'égui .
Aha che kypy'y rógape oikóva pépe . Iména omba'apohína Upe Inteligencia ndive ha che aha hógape .
Kennedy he'i ore atýpe oheka haĝua umi mboka guasu .
Upe Base Aérea Laughlin noñembotýi araka'eve .
Ña Faulk omboguata peteî HONDA sa’yju ára ha ára oho haĝua omba’apo .
He’i chéve aikuaava’erâha mbo'ehao iporâtaha .
Che kypy'y he'i mba'evépe ndajoguaiha che jarýipe .
Upe aja upe Fuerza Aérea ojogua SR71 , ko'áĝa upe A-12 , romba'apovaroína CIA ndive .
Che jarýi ha che taitachu niko sapy'ánte ijargel-rasa ha ndahaseguasúi hogapekuéra .
Nachemandu’ái ahendoramoguare oñeñe'ê Will Point rehe .
Namoñe'êi ni peteî aranduka ohasáva 100 kuatia roguégui .
Ndaikuaái mba'éichapa ajapóta upe tembiapo oñeme'êva chéve ko árape .
Oooo , mba'épa ovale yvypóra rekove , ikatúnepa terâpa ndaikatúi jagueroikove peteî tapicha .
Okakuaávo ohóvo , araka’eve ndohechakuaái ojavyha , katu omoambue heko .
Ikatúkuri rombokatupyry reiporukuaa haĝua upe ao de presión ka'arueterâ .
Ahayhuve jagua ikaiguéva ikotyvy'áva , ani peteîva ikyre'ÿeteríva oîséva okape ara pukukue .
Oiméne ndaha'éi tapicha iñarandupavéva ko yvórape , katu horyrasa , ha ojepy'apy umi oñemoaranduséva rehe .
Ombovyvy mbeguekatu asy .
Iporãveta remboguejy'imiro upe tornillo’i , peteĩ tesapirĩme ikatu rehunga nde rapicha vevýi .
Oiméramo kytomi , tekotevê remyatyrô upe regulador .
Ima'ê rehe oikévo upe okê rupi aikuaa ndaha'éihague oha'arôva .
Chéniko , sargento , tendota , mbo'ehára , namba'apovéimava , he'iháicha Rick
Ambue hemiarirô rehe opena ambue hûhaguére .
Nde ára repytu'u haĝua hetave umi mba'apoha tavarupiguápe .
Peteî voko'i 6 liméta orekóva 30 centavo sa'ive rehepyme'êta upe tetâ mboypýri .
Umi tenda ahaseveha apytépe oî ko y rembe'y , iporâiterei , ha nde moôpa rehoseve ?
Ejesarereko porâséramo mbokakuéra rehe reiporuva ’ erâ mokôivéva nde po .
Roikova'ekue Mallard Creek 85-pe , ko ’ áĝa upéva 485 , rova rupi upépe .
Ajapomanteva'erâ , ohypytýma rupi ary .
Ha mba'etekópa ojoguaitereíramo ajaposévape .
Ha'e opyta oiko Augusta-pe upe ñembokapu riréjepe .
Ha upéicharamo kóva ndaha'éi nde jagua ypykue .
Ñangarekoha mokôi aragua , ohenói hikuái tuja ha ĝuaiĝui ñeñangarekoha , katu ha'e oho upe otyarômava rendápe .
Namemeigua , katu ojejapóva ñepytyvô ome'êva marandu ñemurâ rupive .
Héê , chemandu'a che jarýi ha che ramói osêmi tapére ombyaty latíta .
ni peteî níkel namboguejymo'âi , térâ osêva peteîcha , 30 centavo peve amboguejy poteî liméta rehe . Opavave ohasa ko tetâ rembe'y ojugua haĝua jey'urâ ndahepýiva .
Ha upéi upe mba'e mokôiha amañátava mboýpa ikatu ohepyme'ê .
